Add dom logic and connect function for gameplay

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
             <h1>Tic Tac Toe</h1>
         </div>
         <div class="ctrlContainer">
-            <div class="Play">
-                <button>Play</button>
-            </div>
+            <button class="Play">Play</button>
             <div class="popup1">
                 <input type="text" placeholder="Player 1 name">
                 <input type="text" placeholder="Player 2 name">
             </div>
             <div class="popup2">
-                <div class="score1">Player 1 score:</div>
-                <div class="score2">Player 1 score:</div>
+                <div>Player 1 score : <span class="score1">0</span></div>
+                <div>Player 2 score : <span class="score2">0</span></div>
             </div>
         </div>
         <div class="grid">
